Prototipo vista ventas

--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -92,6 +92,10 @@
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un DNI
                                 </span>
+                                <span id="errorMensajeDNI2"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>El numero de DNI debe tener al menos 7 caracteres
+                                </span>
                             </div>
 
                             <div class="mb-2 col-md-4">
@@ -101,6 +105,10 @@
                                 <span id="errorMensajeTelefono"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un telefono
+                                </span>
+                                 <span id="errorMensajeTelefono2"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>El numero de telefono debe tener al menos 8 caracteres
                                 </span>
                             </div>
 
@@ -148,8 +156,12 @@
                                     autocomplete="new-password">
                                 <span id="errorMensajeContraseña"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
-                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un email
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una contraseña
                                 </span>
+                                 <span id="errorMensajeContraseña2"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>La contraseña debe tener al menos 6 caracteres
+                                </span> 
                             </div>
 
                             <div class="mb-2 col-md-6">
