--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -32,11 +32,11 @@
                         <thead>
                             <tr>
                                 <th>Apellido y Nombre</th>
-                                <th>DNI</th>
-                                <th>Dirección</th>
-                                <th>Telefono</th>
-                                <th>Usuario</th>
-                                <th>Rol</th>
+                                <th class="ocultar-en-768px">DNI</th>
+                                <th class="ocultar-en-768px">Dirección</th>
+                                <th class="ocultar-en-768px">Telefono</th>
+                                <th class="ocultar-en-768px">Usuario</th>
+                                <th class="ocultar-en-768px">Rol</th>
                                 <th style="width: 70px"></th>
                                 <th style="width: 70px"></th>
                             </tr>
