--- a/ClubSoft/Views/Productos/Index.cshtml
+++ b/ClubSoft/Views/Productos/Index.cshtml
@@ -26,11 +26,11 @@
               <tr>
                 @* <th>Imagen</th> *@
                 <th>Nombre</th>
-                <th>Precio</th>
+                <th class="ocultar-en-768px">Precio</th>
                 <th class="text-center">Cantidad</th>
-                <th class="text-center">Descripcion</th>
-                <th class="text-center">Tipo de Producto</th>
-                <th class="text-center">Estado</th>
+                <th class="text-center ocultar-en-768px">Descripcion</th>
+                <th class="text-center ocultar-en-768px">Tipo de Producto</th>
+                <th class="text-center ">Estado</th>
                 <th style="width: 60px"></th>
                 <th style="width: 60px"></th>
                 <th style="width: 60px"></th>
