--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -46,6 +46,8 @@
                                 asp-action="Index">Socios Titulares</a>
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="SocioAdherentes"
                                 asp-action="Index">Socios Adherentes</a>
+                                 <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="SocioAdherentes"
+                                asp-action="InformeSocios">Informe Socios</a>
                         </div>
                     </div>
 
@@ -62,6 +64,8 @@
                                 asp-action="Index">Administrar eventos</a>
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="TipoEventos"
                                 asp-action="Index">Tipos de Eventos</a>
+                                <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Eventos"
+                                asp-action="InformeEventos">Informe Eventos</a>
                         </div>
                     </div>
 
@@ -78,10 +82,14 @@
                                 asp-action="Index">Administrar productos</a>
                             <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="TipoProductos"
                                 asp-action="Index">Tipos de Productos</a>
+                                 <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Productos"
+                                asp-action="InformeProductos">Informe Productos</a>
                         </div>
                     </div>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="CuentaCorrientes"
                         asp-action="Index"><i class="fa-solid fa-pen-to-square pe-2"></i>Cuentas Corrientes</a>
+                        <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Cobros"
+                        asp-action="Index"><i class="fa-solid fa-wallet pe-2"></i>Cobros</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas"
                         asp-action="Index"><i class="fa-solid fa-cart-shopping pe-2"></i>Ventas</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias"
