--- a/ClubSoft/Views/SocioTitulares/Index.cshtml
+++ b/ClubSoft/Views/SocioTitulares/Index.cshtml
@@ -18,14 +18,16 @@
                         <input type="text" class="form-control" id="searchInput" placeholder="Buscar por nombre...">
                         <button class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
+                     <button class="btn btn-primary boton-imprimir" onclick="Imprimir()"><i class="fa-solid fa-print"></i></button>
                 </div>
+
                 <div class="col-md-4 text-end d-flex align-items-center justify-content-end">
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>SOCIOS TITULARES</h3>
                 </div>
             </div>
             <div class="card-body mb-5">
                 <div class="table-responsive" style="height: 450px; overflow-y: auto;">
-                    <table class="table table-hover align-middle">
+                    <table  id="tabla-imprimirsocios"class="table table-hover align-middle">
                         <thead>
                             <tr>
                                 <th>Apellido y Nombre</th>
