--- a/ClubSoft/wwwroot/css/Socios.css
+++ b/ClubSoft/wwwroot/css/Socios.css
@@ -62,3 +62,13 @@ color: white;
     color: #fff;
     cursor: pointer;
   }
+  .boton-imprimir{
+    height: 40px;
+    width: 40px;
+    background: rgb(12, 12, 86);
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+    color: #fff;
+    cursor: pointer;
+    margin-left: 8px;
+  }
