--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -12,47 +12,49 @@
     </button>
 </div> *@
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: rgba(16,39,62,1);">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: rgba(16,39,62,1);">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-        <img src="~/img/logonav.png" alt="logo" style="width: 150px;">
+            <img src="~/img/logonav.png" alt="logo" style="width: 150px;">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-            <a class="nav-link text-light fs-5" aria-current="page" href="#QUIENESSOMOS">¿QUIENES SOMOS?</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link text-light fs-5" href="#FUNCIONES">FUNCIONES</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link text-light fs-5" href="#CONTACTO">CONTACTO</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-light fs-5" aria-current="page" href="#QUIENESSOMOS">¿QUIENES SOMOS?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light fs-5" href="#FUNCIONES">FUNCIONES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light fs-5" href="#CONTACTO">CONTACTO</a>
+                </li>
+            </ul>
         </div>
     </div>
-    </nav>
+</nav>
 
-    <section id="QUIENESSOMOS">
-        <div class="fondohome imghome">
-            <div class="row" style="height: 80vh;">
-                <div class="col-sm-12 col-md-6 text-center p-4 centrar" >
-                    <h1 class="tituloquienessomos text-light">SISTEMA DE GESTION DE CLUBES</h1>
-                    <p class="fs-5 text-light">Somos una empresa dedicada exclusivamente al desarrollo de sistemas de gestion de clubes deportivos</p>
-                    <div class="d-grid gap-2 d-md-block col-6 mx-auto">
-                        <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
-                        <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
-                    </div>
-                    
+<section id="QUIENESSOMOS">
+    <div class="fondohome imghome">
+        <div class="row" style="height: 80vh;">
+            <div class="col-sm-12 col-md-6 text-center p-4 centrar">
+                <h1 class="tituloquienessomos text-light">SISTEMA DE GESTION DE CLUBES</h1>
+                <p class="fs-5 text-light">Somos una empresa dedicada exclusivamente al desarrollo de sistemas de
+                    gestion de clubes deportivos</p>
+                <div class="d-grid gap-2 d-md-block col-6 mx-auto">
+                    <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
+                    <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
                 </div>
+
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="FUNCIONES">
+<section id="FUNCIONES">
     <div class="p-5">
         <h1 class="text-center p-2 titulossecciones">FUNCIONES</h1>
         <div class="row text-center">
@@ -70,7 +72,8 @@
                     <div class="card-body">
                         <i class="fa-solid fa-credit-card iconofunciones"></i>
                         <h5 class="card-title">MEMBRESIA</h5>
-                        <p class="card-text parrafo">Pago de cuotas, historial de pagos y visualizacion de su membresia.</p>
+                        <p class="card-text parrafo">Pago de cuotas, historial de pagos y visualizacion de su membresia.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -88,40 +91,47 @@
                     <div class="card-body">
                         <i class="fa-solid fa-cart-shopping iconofunciones"></i>
                         <h5 class="card-title">REGISTRO DE VENTAS</h5>
-                        <p class="card-text parrafo">Compra de productos, entradas y buffet.</p>
+                        <p class="card-text parrafo">Venta de productos, entradas y buffet.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </section>
-    
-  <section id="CONTACTO">
-      <div class="ps-5 pe-5 pb-5 text-center">  
-          <div class="row">
+</section>
+
+<section id="CONTACTO">
+    <div class="ps-5 pe-5 pb-5 text-center">
+        <div class="row">
             <div class="col-md-6 col-sm-12 marginform pe-5 ps-5">
-            <h1 class="titulossecciones">¡CONTACTANOS!</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13718.0919737343!2d-62.010790741833496!3d-30.7318076999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9435031514f117bb%3A0xd34bfbaaf4e0430c!2sColegio%20Ezpeleta!5e0!3m2!1ses-419!2sar!4v1722533661536!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h1 class="titulossecciones">¡CONTACTANOS!</h1>
+                <div class="map-responsive">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13718.0919737343!2d-62.010790741833496!3d-30.7318076999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9435031514f117bb%3A0xd34bfbaaf4e0430c!2sColegio%20Ezpeleta!5e0!3m2!1ses-419!2sar!4v1722533661536!5m2!1ses-419!2sar"
+                        width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
             </div>
+
             <div class="col-md-6 col-sm-12 fuentecards p-5">
-              <div>
-                <i class="iconocontacto fa-solid fa-location-dot p-3"></i>
-                <p><b>Morteros, Argentina</b></p>
-              </div>
-              <div>
-                <i class="iconocontacto fa-solid fa-envelope p-3"></i>
-                <p><b>contacto@clubsoft.com.ar</b></p>
-              </div>
-              <div>
-                <i class="iconocontacto fa-solid fa-phone p-3"></i>
-                <p><b>3562 41-5914</b></p>
-              </div>
+                <div>
+                    <i class="iconocontacto fa-solid fa-location-dot p-3"></i>
+                    <p><b>Morteros, Argentina</b></p>
+                </div>
+                <div>
+                    <i class="iconocontacto fa-solid fa-envelope p-3"></i>
+                    <p><b>contacto@clubsoft.com.ar</b></p>
+                </div>
+                <div>
+                    <i class="iconocontacto fa-solid fa-phone p-3"></i>
+                    <p><b>3562 41-5914</b></p>
+                </div>
             </div>
-          </div>
-        </div>  
-    </section>
+        </div>
+    </div>
+</section>
 
 
-  <footer class="footer">
+<footer class="footer">
     <p class="text-center">© Copyright ClubSoft. Todos los derechos reservados</p>
-  </footer>
+</footer>
