--- a/ClubSoft/Views/Eventos/InformeEventos.cshtml
+++ b/ClubSoft/Views/Eventos/InformeEventos.cshtml
@@ -1,10 +1,9 @@
 <div class="p-3">
     @*TABLA*@
-    <div class="mt-2" style="heigth: 100%;">
+    <div class="mt-2" style="height: 100%;">
         <div class="card shadow-sm">
             <div class="card-header row m-0 p-2">
-
-                <div class="col-md-6 text-end d-flex align-items-center justify-content-end">
+                <div class="col-md-12 text-end">
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>INFORME EVENTOS</h3>
                 </div>
             </div>
@@ -24,6 +23,8 @@
             </div>
         </div>
     </div>
+</div>
+
 
     @section Scripts {
   <script src="~/js/InformeEventos.js"></script>
