--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -6,25 +6,29 @@
 @* <div class="text-center">
     <h1 class="display-4">Localidades</h1>
 </div> *@
-
 <div class="p-3">
   <div class="row">
     <h4>Agregar Nueva Localidad<i class="ms-2 fa-solid fa-square-plus"></i></h4>
     <input type="hidden" id="LocalidadID" value="0" />
-    <div class="col-md-3">
+    <div class="col-md-3 mb-3">
       <input type="text" class="form-control shadow-sm" id="LocalidadNombre" style="text-transform:uppercase"
         placeholder="Ingrese la localidad">
-      <span id="errorMensajeLocalidad" style="color:red; display:none; font-size: 15px; padding-left: 4px;"><i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una localidad</span>
+      <span id="errorMensajeLocalidad" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+        <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una localidad
+      </span>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-3">
         @Html.DropDownList("ProvinciaID", null, htmlAttributes: new { @class = "form-control shadow-sm" })
-        <span id="errorMensajeProvincia" style="color:red; display:none; font-size: 15px; padding-left: 4px;"><i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar una provincia</span>
+        <span id="errorMensajeProvincia" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+          <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar una provincia
+        </span>
     </div>
     <div class="col-md-3">
       <button type="button" onclick="GuardarRegistro()" class="btn boton-color shadow-sm">Guardar</button>
     </div>
   </div>
 </div>
+
 
 
 
