--- a/ClubSoft/wwwroot/css/home.css
+++ b/ClubSoft/wwwroot/css/home.css
@@ -93,3 +93,17 @@ input.btn:hover{
     font-size: 14px;
     color: white;
 }
+.map-responsive {
+    position: relative;
+    padding-bottom: 56.25%; /* Proporción 16:9 */
+    height: 0;
+    overflow: hidden;
+}
+
+.map-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
