validaciones localidades y provincias

--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -52,7 +52,7 @@
     </div>
 
     @* MODAL AGREGAR *@
-    <div class="modal" tabindex="-1" id="ModalPersonas">
+    <div class="modal" tabindex="-1" id="ModalPersonas" data-bs-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content container-modal">
                 <div class="modal-header">
