--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -5,30 +5,40 @@
 <link rel="stylesheet" href="~/css/Cobros.css" asp-append-version="true" />
 
 
-<div class="p-3" style="heigth: 100%;">
-  <div class="card shadow-sm">
-    <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>COBRO</h3>
-    <div class="card-body">
-      <div class="table-responsive" style="height: 500px; overflow-y: auto;">
-        <table class="table table-hover align-middle">
-          <thead>
-            <tr>
-              <th style="position: sticky; top: 0; background-color: white;">Fecha</th>
-              <th>Cliente</th>
-              <th>Estado</th>
-              <th>Total</th>
-              <th>Vendedor</th>
-              <th style="width: 70px"></th>
-              <th style="width: 70px"></th>
-            </tr>
-          </thead>
-          <tbody id="tbody-Cobros">
-          </tbody>
-        </table>
-      </div>
+<div class="p-3">
+    <div class="mt-2" style="height: 100%;">
+        <div class="card shadow-sm">
+            <div class="card-header row m-0 p-2">
+                <div class="col-md-6 d-flex align-items-center">
+                    <button type="button" class="btn boton-color"
+                        onclick="window.location.href='@Url.Action("NuevoCobro", "Cobros")'">
+                        <i class="fa-solid fa-plus fa-2x"></i>
+                    </button>
+
+                </div>
+                <div class="col-md-6 text-end d-flex align-items-center justify-content-end">
+                    <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>COBROS</h3>
+                </div>
+            </div>
+            <div class="card-body mb-5">
+                <div class="table-responsive" style="height: 450px; overflow-y: auto;">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Nº Cobro</th>
+                                <th>Cliente</th>
+                                <th>Fecha</th>
+                                <th>Total</th>
+                                <th>Estado</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbody-Cobros">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
 @* <div>
    <button class="boton-flotante" onclick="registrarCobro()">
