--- a/ClubSoft/Views/Cobros/Index.cshtml
+++ b/ClubSoft/Views/Cobros/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Tipo de Productos";
+    ViewData["Title"] = "Cobros";
 }
 
 <link rel="stylesheet" href="~/css/Cobros.css" asp-append-version="true" />
