--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -36,8 +36,8 @@
   <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>LOCALIDADES</h3>
     <div class="card-body mb-5">
-      <div class="table-responsive" style="height: 350px; overflow-y: auto;">
-      <table class="table table-hover align-middle">
+      <div class="table-responsive" >
+      <table class="table table-hover align-middle" style="height: 300px; overflow-y: auto;">
         <thead>
           <tr>
             <th>Nombre</th>
@@ -51,6 +51,7 @@
       </table>
     </div>
     </div>
+    <div id="paginacion" class="card-footer"></div>
   </div>
 </div>
   
