--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -24,8 +24,8 @@
   <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>PROVINCIAS</h3>
     <div class="card-body">
-      <div class="table-responsive" style="height: 500px; overflow-y: auto;">
-        <table class="table table-hover align-middle">
+      <div class="table-responsive">
+        <table class="table table-hover align-middle" style="min-height: 300px; overflow-y: auto;">
           <thead>
             <tr>
               <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
@@ -38,6 +38,7 @@
         </table>
       </div>
     </div>
+  <div id="paginacion" class="card-footer"></div>  
   </div>
 </div>
 
