--- a/ClubSoft/Views/SocioAdherentes/Index.cshtml
+++ b/ClubSoft/Views/SocioAdherentes/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-  ViewData["Title"] = "Socios Titulares";
+  ViewData["Title"] = "Socios Adherentes";
 }
 
 <link rel="stylesheet" href="~/css/Socios.css" asp-append-version="true" />
@@ -39,7 +39,8 @@
                     </table>
                 </div>
             </div>
-        </div>
+            <div id="paginacion" class="card-footer"></div>
+        </div>  
     </div>
 </div>
 
