--- a/ClubSoft/wwwroot/css/Socios.css
+++ b/ClubSoft/wwwroot/css/Socios.css
@@ -72,3 +72,32 @@ color: white;
     cursor: pointer;
     margin-left: 8px;
   }
+
+  .page-item .page-link {
+    color: white; /* Color de texto general */
+    background-color: rgb(12, 12, 86); /* Color de fondo general */
+    border-color: rgb(12, 12, 86); /* Color de borde general */
+}
+
+  .page-item:first-child .page-link {
+    background-color: rgb(12, 12, 86);
+    color: white;
+    border-color: rgb(12, 12, 86);
+    color: white;
+}
+
+.page-item:last-child .page-link {
+  background-color: rgb(12, 12, 86);
+  color: white;
+  border-color: rgb(12, 12, 86);
+  color: white;
+}
+
+.page-item.active .page-link {
+  background-color: rgb(194, 185, 185);
+  border-color:rgb(194, 185, 185);
+}
+.page-item.disabled .page-link {
+  background-color:  rgb(12, 12, 86);
+  color: white
+}
