--- a/ClubSoft/Views/Productos/Index.cshtml
+++ b/ClubSoft/Views/Productos/Index.cshtml
@@ -19,7 +19,7 @@
           <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i> PRODUCTOS</h3>
         </div>
       </div>
-      <div class="card-body mb-5">
+      <div class="card-body">
         <div class="table-responsive" style="height: 450px; overflow-y: auto;">
           <table class="table table-hover align-middle">
             <thead>
@@ -41,6 +41,7 @@
           </table>
         </div>
       </div>
+      <div id="paginacion" class="card-footer"></div> 
     </div>
   </div>
 
