--- a/ClubSoft/Views/SocioTitulares/Index.cshtml
+++ b/ClubSoft/Views/SocioTitulares/Index.cshtml
@@ -39,6 +39,7 @@
                     </table>
                 </div>
             </div>
+            <div id="paginacion" class="card-footer"></div>
         </div>
     </div>
 </div>
