--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -112,6 +112,8 @@
                         asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades"
                         asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
+                        <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Graficos"
+                        asp-action="Index"><i class="fas fa-city pe-2"></i>Graficos</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
                         asp-action="Privacy">Privacy</a>
                 </div>
