--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -24,8 +24,8 @@
   <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>PROVINCIAS</h3>
     <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-hover align-middle" style="min-height: 300px; overflow-y: auto;">
+      <div class="table-responsive" style="height: 340px">
+        <table class="table table-hover align-middle">
           <thead>
             <tr>
               <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
