--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -28,8 +28,7 @@
                                 <th>Cliente</th>
                                 <th>Fecha</th>
                                 <th>Total</th>
-                                <th>Estado</th>
-                                <th></th>
+                                <th class="text-center">Detalle</th>
                             </tr>
                         </thead>
                         <tbody id="tbody-Ventas">
