--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -35,13 +35,13 @@
 <div class="p-3" style="heigth: 100%;">
   <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>LOCALIDADES</h3>
-    <div class="card-body mb-5">
-      <div class="table-responsive" >
-      <table class="table table-hover align-middle" style="height: 300px; overflow-y: auto;">
+    <div class="card-body">
+      <div class="table-responsive" style="height: 340px" >
+      <table class="table table-hover align-middle">
         <thead>
           <tr>
-            <th>Nombre</th>
-            <th>Provincia</th>
+            <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
+            <th style="position: sticky; top: 0; background-color: white;">Provincia</th>
             <th style="width: 70px"></th>
             <th style="width: 70px"></th>
           </tr>
