--- a/ClubSoft/wwwroot/css/CuentaCorrientes.css
+++ b/ClubSoft/wwwroot/css/CuentaCorrientes.css
@@ -9,7 +9,7 @@
 
 .boton-color {
     background-color: rgb(12, 12, 86);
-    color: white;
+    color: #ffffff;
     border-color: rgb(12, 12, 86);
 }
 
