--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -19,7 +19,7 @@
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>VENTAS</h3>
                 </div>
             </div>
-            <div class="card-body mb-5">
+            <div class="card-body">
                 <div class="table-responsive" style="height: 450px; overflow-y: auto;">
                     <table class="table table-hover">
                         <thead>
@@ -36,6 +36,7 @@
                     </table>
                 </div>
             </div>
+            <div id="paginacion" class="card-footer"></div> 
         </div>
     </div>
 
