--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -21,14 +21,14 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive" style="height: 450px; overflow-y: auto;">
-                    <table class="table table-hover">
+                    <table class="table table-hover align-middle">
                         <thead>
-                            <tr>
+                            <tr class="text-center">
                                 <th>Nº Venta</th>
                                 <th>Cliente</th>
                                 <th>Fecha</th>
                                 <th>Total</th>
-                                <th class="text-center">Detalle</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody id="tbody-Ventas">
