--- a/ClubSoft/Views/Graficos/Index.cshtml
+++ b/ClubSoft/Views/Graficos/Index.cshtml
@@ -7,17 +7,20 @@
         <div class="card" style="background-color: rgb(206, 204, 204);"> <!-- Fondo gris claro -->
             <div class="card-body">
                 <h5 class="card-title text-center">Cantidad de Socios</h5>
+                <p id="totalSocios" class="text-center" style="font-size: 1.5rem;">0</p> <!-- Placeholder para el total de socios -->
             </div>
         </div>
     </div>
 
     <div class="col-md-6 mb-3">
-        <div class="card" style="background-color:rgb(206, 204, 204)"> <!-- Fondo gris claro -->
-            <div class="card-body">
-                <h5 class="card-title text-center">Total de Ventas</h5>
-            </div>
+    <div class="card" style="background-color: rgb(206, 204, 204);"> 
+        <div class="card-body">
+            <h5 class="card-title text-center">Total de Ventas</h5>
+            <p id="totalVentas" class="text-center" style="font-size: 1.5rem;">0</p> <!-- Placeholder para el total de ventas -->
         </div>
     </div>
+</div>
+
     <div class="card shadow-sm col-md-6" style="max-height: 400px;"> 
         <h3 class="card-header text-end">
             <i class="fa-solid fa-table pe-2"></i>SOCIOS POR LOCALIDAD</h3>
