--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -40,7 +40,7 @@
       <table class="table table-hover align-middle">
         <thead>
           <tr>
-            <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
+            <th style="position: sticky; top: 0; background-color: white;">Localidad</th>
             <th style="position: sticky; top: 0; background-color: white;">Provincia</th>
             <th style="width: 70px"></th>
             <th style="width: 70px"></th>
