--- a/ClubSoft/Views/TipoEventos/Index.cshtml
+++ b/ClubSoft/Views/TipoEventos/Index.cshtml
@@ -39,7 +39,7 @@
     <div class="card shadow-sm h-100">
       <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>TIPOS DE EVENTOS</h3>
       <div class="card-body">
-        <div class="table-responsive" style="height: 500px; overflow-y: auto;">
+        <div class="table-responsive" style="height: 350px;">
           <table class="table table-hover">
             <thead>
               <tr>
@@ -53,6 +53,7 @@
           </table>
         </div>
       </div>
+      <div id="paginacion" class="card-footer"></div>  
     </div>
   </div>
 
@@ -60,11 +61,11 @@
     <div class="card shadow-sm h-100">
       <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>LUGARES</h3>
       <div class="card-body">
-        <div class="table-responsive" style="height: 500px; overflow-y: auto;">
+        <div class="table-responsive" style="height: 350px; overflow-y: auto;">
           <table class="table table-hover">
             <thead>
               <tr>
-                <th style="position: sticky; top: 0; background-color: white;">Lugar</th>
+                <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
                 <th style="width: 70px;"></th>
                 <th style="width: 70px;"></th>
               </tr>
@@ -74,6 +75,7 @@
           </table>
         </div>
       </div>
+      <div id="paginacion-lugares" class="card-footer align-midlle"></div> 
     </div>
   </div>
 </div>
