--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -25,7 +25,7 @@
   <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>TIPOS DE PRODUCTOS</h3>
     <div class="card-body">
-      <div class="table-responsive" style="height: 500px; overflow-y: auto;">
+      <div class="table-responsive" style="height: 340px; overflow-y: auto;">
         <table class="table table-hover align-middle">
           <thead>
             <tr>
@@ -39,6 +39,7 @@
         </table>
       </div>
     </div>
+    <div id="paginacion" class="card-footer"></div>  
   </div>
 </div>
 
