--- a/ClubSoft/Views/Ventas/NuevaVenta.cshtml
+++ b/ClubSoft/Views/Ventas/NuevaVenta.cshtml
@@ -97,7 +97,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3>Total: <span id="total-price">$0.00</span></h3>
+                            <h4>TOTAL: <span id="total-price">$0.00</span></h4>
                         </div>
                         <div class="col-md-6 text-end">
                             <button type="button" class="btn btn-danger" onclick="CancelarVenta()">Cancelar</button>
